# k8s-metrics-rs

./: Cargo.toml  README.md  release.toml
examples/: podmetrics.rs
k8s-metrics/: Cargo.toml
k8s-metrics/src/: external_metrics.rs  lib.rs  metrics.rs  quantity.rs
k8s-metrics/src/metrics/: v1beta1.rs
k8s-metrics/src/metrics/v1beta1/: duration.rs  node.rs  pod.rs  tests.rs
src/: custom_metrics.rs  lib.rs  quantity.rs  v1beta1.rs
src/custom_metrics/: v1beta2.rs
src/external_metrics/: v1beta1.rs
src/metrics/: v1beta1.rs
src/metrics/v1beta1/: de.rs  node.rs  pod.rs  tests.rs
src/v1beta1/: de.rs  node.rs  pod.rs  tests.rs
