[package]
name = "k8s-metrics"
version = "0.16.0"
edition = "2021"
rust-version = "1.61"
description = "K8s Metrics API Resource definitions"
repository = "https://github.com/imp/k8s-metrics-rs"
license = "Apache-2.0"


[dependencies]
go-parse-duration = "0.1"
k8s-openapi = { version = "0.22", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"


[dev-dependencies]
k8s-openapi = { version = "0.22", features = ["latest"] }
kube = { version = "0.93" }
tokio = { version = "1.35", features = ["full"] }


[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]

[features]
pedantic = []
